*SVN*

* RailsFCGIHandler (dispatch.fcgi) no longer tries to explicitly flush $stdout (CgiProcess#out always calls flush)

* Fixed rakefile actions against PostgreSQL when the password is all numeric #1462 [michael@schubert.cx]

* ActionMailer::Base subclasses are reloaded with the other rails components #1262

* Made the WEBrick adapter not use a mutex around action performance if ActionController::Base.allow_concurrency is true (default is false)

* Fixed that mailer generator generated fixtures/plural while units expected fixtures/singular #1457 [Scott Barron]

* Added a 'whiny nil' that's aim to ensure that when users pass nil to methods where that isn't appropriate, instead of NoMethodError? and the name of some method used by the framework users will see a message explaining what type of object was expected. Only active in test and development environments by default #1209 [Michael Koziarski]

* Fixed the test_helper.rb to be safe for requiring controllers from multiple spots, like app/controllers/article_controller.rb and app/controllers/admin/article_controller.rb, without reloading the environment twice #1390 [Nicholas Seckar]

* Fixed Webrick to escape + characters in URL's the same way that lighttpd and apache do #1397 [Nicholas Seckar]

* Added -e/--environment option to script/runner #1408 [fbeausoleil@ftml.net]

* Modernize the scaffold generator to use the simplified render and test methods and to change style from @params["id"] to params[:id].  #1367

* Added graceful exit from pressing CTRL-C during the run of the rails command #1150 [Caleb Tennis]

* Allow graceful exits for dispatch.fcgi processes by sending a SIGUSR1 or SIGHUP. If the process is currently handling a request, the request will be allowed to complete and then will terminate itself. If a request is not being handled, the process is terminated immediately (via #exit). This basically works like restart graceful on Apache. [Jamis Buck]
